fix flickering

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -220,6 +220,7 @@ header {
 
 .state_boundary {
   flex-direction: column;
+  display: none;
 }
 
 .status_header {
